fix: remap --secondary-* derivatives from @crust to readable overlay colors

--- a/catppuccin.user.less
+++ b/catppuccin.user.less
@@ -2,7 +2,7 @@
 @name Linux DO Catppuccin
 @namespace github.com/okamitimo233/linux-do-catppuccin
 @homepageURL https://github.com/okamitimo233/linux-do-catppuccin
-@version         1.0.1
+@version         1.0.2
 @updateURL https://github.com/okamitimo233/linux-do-catppuccin/raw/main/catppuccin.user.less
 @supportURL https://github.com/okamitimo233/linux-do-catppuccin/issues
 @description Soothing pastel theme for Linux DO
@@ -101,9 +101,9 @@
 
     /* ---- secondary derivatives ---- */
     --secondary-low: @mantle;
-    --secondary-medium: @crust;
-    --secondary-high: @crust;
-    --secondary-very-high: @crust;
+    --secondary-medium: @overlay0;
+    --secondary-high: @overlay2;
+    --secondary-very-high: @subtext1;
 
     /* ---- tertiary derivatives ---- */
     --tertiary-very-low: fade(@accent, 10%);
